# DeCoR

./: .gitignore  README.md  config.py  crosswalk_designs_cache.json  plots.py  pyproject.toml  result_plots.py  run_baselines.py  run_rl_control_baseline.py
plots/: __init__.py  create_gmm_animation.py  pedestrian_flow_plot.py  result_plots.py  training_plots.py
ppo/: models.py
runs/baselines_experiment/: baseline_results.json
runs/readout_32/May09_11-34-05/results/eval_May10_16-16-52/: policy_at_7603200_ppo.json  policy_at_7603200_tl.json  policy_at_7603200_unsignalized.json  realworld_unsignalized.json
