[project]
name = "decor"
version = "0.1.0"
description = "Design and Control Co-Optimization for urban streets using reinforcement learning"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gymnasium==0.29.1",
    "matplotlib==3.9.2",
    "networkx==3.3",
    "numpy==1.26.0",
    "pandas==2.2.3",
    "scipy==1.15.0",
    "seaborn==0.13.2",
    "setuptools==69.5.1",
    "sumolib==1.22.0",
    "tensorboard==2.17.0",
    "torch==2.3.1",
    "torch-geometric==2.6.1",
    "traci==1.22.0",
    "wandb==0.17.7",
]

[tool.uv]
package = false
